[package]
name = "jsx-dom-expressions"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
strip = "symbols"
opt-level = "z"
codegen-units = 1

[dependencies]
convert_case = "0.6.0"
once_cell = "1.18.0"
regex = "1.10.4"
html-escape = "0.2.13"
serde = { version ="1.0.198", features = ["derive"] }
getrandom = { version = "0.2.14", features = ["js"] }
serde_json = "1.0.116"
string_cache = "0.8.7"
swc_atoms = "0.6.7"
swc_core = { version = "0.91.0", features = [
  "ecma_plugin_transform",
  "ecma_utils",
  "ecma_minifier",
  "ecma_visit",
  "ecma_ast",
  "common",
] }

[dev-dependencies]
testing = "0.35.23"
swc_core = { version = "0.91.0", features = ["testing_transform", "ecma_parser"] }
